--- a/src/main/webapp/VAADIN/themes/qctheme/qctheme.scss
+++ b/src/main/webapp/VAADIN/themes/qctheme/qctheme.scss
@@ -35,4 +35,12 @@
   @include valo;
 
   // Insert your own theme rules here
+  
+  .CustomLogo{
+  	color: #000;
+  }
+  
+  .customButton{
+  	color: #000;
+  }
 }
