--- a/src/main/webapp/VAADIN/themes/qctheme/qctheme.scss
+++ b/src/main/webapp/VAADIN/themes/qctheme/qctheme.scss
@@ -35,6 +35,9 @@
   @include valo;
 
   // Insert your own theme rules here
+  #mainPage {
+  	background-color: #000;
+  }
   
   .CustomLogo{
   	color: #000;
