--- a/src/main/webapp/VAADIN/themes/qctheme/styles.scss
+++ b/src/main/webapp/VAADIN/themes/qctheme/styles.scss
@@ -9,3 +9,66 @@
   @include qctheme;
 
 }
+
+html {
+	background-color: #000;
+	margin: 0 auto;
+	max-width: 1280px;
+	
+}
+
+
+.qForm {
+
+	width: 98%;
+}
+.qForm > div{
+
+	width: 100%;
+}
+.qForm .qFormInner{
+
+	width: 100%;
+}
+
+.qForm .question{
+	width: 90%;
+	margin-left: 5%;
+	margin-right: 5%;
+	margin-bottom: 20px;
+
+}
+
+.qForm .selectBtn{
+	width: 90%;
+	margin-left: 5%;
+	margin-right: 5%;
+	margin-bottom: 20px;
+
+}
+
+.qForm .v-spacing {
+/* we'll hide this because fuck you vaadin*/
+	clear:none;
+	display:none;
+}
+
+.qForm .margin5 {
+
+	margin-left: 5%;
+	margin-right: 5%;
+}
+.qForm .v-slot-selectBtn {
+
+	width:50%;
+	margin-left: 0;
+	margin-right: 0;
+	float:left;
+	clear:none;
+	
+}
+
+
+
+
+
